flavicon and index page changes
flavicon added to all pages
media query created to reside images on the index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,31 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
- <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="faviconapple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <title > Sistah Space </title>
-  <!-- http://www.favicon-generator.org/ -->
 </head>
 
 <body>
@@ -128,7 +145,6 @@
         <img src="images/8.JPG" alt="picture">
       </div>
 
-      <!-- Left and right controls -->
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -138,187 +154,158 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <!--  </div> -->
   </div>
 </div>
 
 
 <div class = "container container-main">
-<div class = "row">
-  <h1 class = "text-center "> Welcome to Sistah Space! </h1>
-<div class = "col-md-3">
-  <img class= "portrait img-responsive   " src= "images/logo.jpg" alt= "Sistah Space logo">
-</div>
+  <div class = "row">
+    <h1 class = "text-center "> Welcome to Sistah Space! </h1>
+    <div class = "col-md-3">
+      <img class= "logo img-responsive" src= "images/logo.jpg" alt= "Sistah Space logo">
+    </div>
     <div class = "col-md-9">
-      </br></br>
-          <h4 class = "text-justify"> Sistah Space is a community based initiative that supports African heritage women and girls.</h4>
-      <h4 class = "text-justify"> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls. </h4>
-      <h4 class = "text-justify" > We work with our local community and services to raise awareness of domestic and sexual abuse.  </h4>
-
-    </div>
+    </br></br>
+    <h4 class = "text-justify"> Sistah Space is a community based initiative that supports African heritage women and girls.</h4>
+    <h4 class = "text-justify"> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls.</h4>
+    <h4 class = "text-justify"> We work with our local community and services to raise awareness of domestic and sexual abuse.</h4>
   </div>
-  <div class="social social-intro">
-    <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-    <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-  </div>
-<hr>
-
-  <div class="row">
-    <div class="col-sm-6 " id ="our-journey">
-      <div class='inner-column '>
-        <h2 class = "text-center ">Why Sistah Space?</h2>
-        <p class="text-justify">Valerie Forde and her 22-month old daughter were viciously <a href="http://www.bbc.co.uk/news/uk-england-london-36562028"> murdered </a> by Valerie's ex-partner (also the baby's father) in 2014. This tragic event, which highlighted the need for an organisation to tackle domestic abuse in African heritage families, was the catalyst for Sistah Space.
-
-        </p>
-        <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means we can provide a safe space for anyone who is concerned about domestic abuse. </p>
-        <p> Find out more <a href="pages/our_work.html"> about us. </a> </p>
-      </div>
-    </div>
-
-
-    <div class = "col-sm-6 ">
-      <figure class="figure">
-        <img class="valerie picture-holder figure-img  img-responsive center-block" src= "images/valerie.jpg" alt="Picutre of Valerie F.">
-        <figcaption class= "figure-caption text-center"> Valerie Ford and her daughter. </figcaption>
-      </figure>
-    </div>
-
-  </div>
-<hr>
-
-  <h2 class="text-center"> News </h3>
-<div class="news-field">
-
-
-      <div class="text-center">
-        <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
-      	<h4 class="text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4>
-      <ul class="date-and-time">
-      	 <li><h4>  <b>Date:</b> 8th of October 2016 </h4></li>
-         <li><h4> <b>Time:</b> 2pm-7pm </h4></li>
-
-
-      </ul>
-        <h4> <b>Venue:</b> Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX </h4>
-        <p>More information to follow shortly.</p>
-    </div>
 </div>
+<div class="social social-intro">
+  <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+  <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+</div>
+<hr>
+
 <div class="row">
+  <div class="col-sm-6 " id ="our-journey">
+    <h2 class = "text-center ">Why Sistah Space?</h2>
+    <p class="text-justify">Valerie Forde and her 22-month old daughter were viciously <a href="http://www.bbc.co.uk/news/uk-england-london-36562028"> murdered </a> by Valerie's ex-partner (also the baby's father) in 2014. This tragic event, which highlighted the need for an organisation to tackle domestic abuse in African heritage families, was the catalyst for Sistah Space.</p>
+    <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means we can provide a safe space for anyone who is concerned about domestic abuse. </p>
+    <p> Find out more <a href="pages/our_work.html"> about us. </a> </p>
+  </div>
+
+  <div class = "col-sm-6 ">
+    <figure class="figure">
+      <img class="valerie picture-holder figure-img  img-responsive center-block" src= "images/valerie.jpg" alt="Picutre of Valerie F.">
+      <figcaption class= "figure-caption text-center"> Valerie Ford and her daughter. </figcaption>
+    </figure>
+  </div>
+</div>
+<hr>
+
+<h2 class="text-center"> News </h3>
+  <div class="news-field">
+    <div class="text-center">
+      <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
+      <h4 class="text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4>
+      <ul class="date-and-time">
+        <li><h4>  <b>Date:</b> 8th of October 2016 </h4></li>
+        <li><h4> <b>Time:</b> 2pm-7pm </h4></li>
+      </ul>
+      <h4> <b>Venue:</b> Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX </h4>
+      <p>More information to follow shortly.</p>
+    </div>
+  </div>
+  <div class="row">
     <div class = "col-md-8">
       <h3>BEGINNERS / INTERMEDIATE SEWING CLASS </h3>
-      <p>Thursday evening 7 - 9pm (enrolment and refreshments 6.30pm) with <b> Ms Djanomi</b></p>
-      <p><b>Venue:</b> SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG
-      <p><b>Cost: </b>&pound5 per hour x 2 hours (sign up for the 6 weeks course and 1 double session is free) </p>
-      <p><b><u>LEARN TO....</u></b>
-      <ul><li>use a sewing machine</li>
-      <li>insert a zip</li>
-      <li>pockets</li>
-      <li>hand sewing</li>
-      <li>make a garment.</li></ul>
-      ...and much more.<p><br>
-      <i><p>Brothas welcome.</p>
-      <p>Please bring your own fabric.</p>
-      <p>Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.</p></i>
- </div>
-    <div class = "col-md-4">
-      <img class="img-responsive news-pic" src="images/sewing_class.jpg">
-    </div>
+      <p>Thursday evening 7 - 9pm (enrolment and refreshments 6.30pm) with <b> Ms Djanomi</b></br>
+        <b>Venue:</b> SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG</br>
+        <b>Cost: </b>&pound5 per hour x 2 hours (sign up for the 6 weeks course and 1 double session is free) </p>
+        <p> <b><u>LEARN TO....</u></b>
+          <ul><li>use a sewing machine</li>
+            <li>insert a zip</li>
+            <li>pockets</li>
+            <li>hand sewing</li>
+            <li>make a garment.</li></ul>
+            <p>...and much more.</br></p>
+            <p><i>Brothas welcome.</br>
+              Please bring your own fabric.</br>
+              Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.</i></br>
+            </div>
+            <div class = "col-md-4">
+              <img class="img-responsive news-pic" src="images/sewing_class.jpg">
+            </div>
+           </div> 
+            <a href="pages/news.html"><p class="text-center">Click here to view more news stories...</p></a>
+            <hr>
 
-    <a href="pages/news.html"><p class="text-center">Click here to view more news stories...</p></a>
-    <hr>
+            <div class = "container">
+              <div class="row ">
+                <div class="col-sm-10 col-sm-offset-1 text-center">
+                 <br><h4>Sistah Space started without any finances at all. It was very hard and we relied heavily on goodwill of our local community and the wider public. We could not have helped so many people without you and we are grateful for your support thus far. </h4>
+                 <h3>These are ways in which you can support us: </h3>
+                 <br>
+               </div>
+             </div>
 
+             <div class="row card-container">
+               <div class="card card-green">
+                 <div class="card-content">
+                   <div class="card-front">
+                     <h2 class="card-title">Donate</h2>
+                   </div>
+                   <div class="card-back card-green">
+                     <p class= "card-text">We accept donations which help us furnish Sistah Space and provide our services. </p>
+                     <a href="pages/donations.html" class="card-link">
+                       Find out more...
+                     </a>
+                   </div>
+                 </div>
+               </div>
 
+               <div class="card card-yellow">
+                 <div class="card-content">
+                   <div class="card-front">
+                     <h2 class="card-title">Volunteer</h2>
+                   </div>
+                   <div class="card-back card-yellow">
+                     <p class= "card-text">Sistah Space is run by volunteers. If you have skills to help us please get in touch.</p>
+                     <a href="pages/volunteer.html" class="card-link">
+                       Find out more...
+                     </a>
+                   </div>
+                 </div>
+               </div>
 
-
-
-<div class = "container" >
-  <div class="row ">
-    <div class="col-sm-8 col-sm-offset-2 text-center">
-     <br><h4>Sistah Space started without any finances at all. It was very hard and we relied heavily on goodwill of our local community and the wider public. We could not have helped so many people without you and we are grateful for your support thus far. </h4>
-     <h3>These are ways in which you can support us: </h3>
-     <br>
-
-
-   </div>
- </div>
-
-
- <div class="row card-container">
-   <div class="card card-green">
-     <div class="card-content">
-       <div class="card-front">
-         <h2 class="card-title">Donate</h2>
+               <div class="card card-red">
+                 <div class="card-content">
+                   <div class="card-front">
+                     <h2 class="card-title">Shop</h2>
+                   </div>
+                   <div class="card-back card-red">
+                     <p class= "card-text">We run a shop at Sistah Space to raise funds for our work. </p>
+                     <a href="pages/shop.html" class="card-link">
+                       Find out more...
+                     </a>
+                   </div>
+                 </div>
+               </div>
+             </div>
+             <hr>
+           </div>
+         </div>
        </div>
-       <div class="card-back card-green">
-         <p class= "card-text">We accept donations which help us furnish Sistah Space and provide our services. </p>
-         <a href="pages/donations.html" class="card-link">
-           Find out more...
-         </a>
-       </div>
-     </div>
-   </div>
-
-   <div class="card card-yellow">
-     <div class="card-content">
-       <div class="card-front">
-         <h2 class="card-title">Volunteer</h2>
-       </div>
-       <div class="card-back card-yellow">
-         <p class= "card-text">Sistah Space is run by volunteers. If you have skills to help us please get in touch.</p>
-         <a href="pages/volunteer.html" class="card-link">
-           Find out more...
-         </a>
-       </div>
-     </div>
-   </div>
-
-   <div class="card card-red">
-     <div class="card-content">
-       <div class="card-front">
-         <h2 class="card-title">Shop</h2>
-       </div>
-       <div class="card-back card-red">
-         <p class= "card-text">We run a shop at Sistah Space to raise funds for our work. </p>
-         <a href="pages/shop.html" class="card-link">
-           Find out more...
-         </a>
-       </div>
-     </div>
-   </div>
- </div>
-<hr>
-</div>
-
-</div>
 
 
+       <footer class="footer">
+        <div class="container">
+          <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+          <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+          <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+          <p>  </p>
+        </div>
+      </footer>
 
-
-
-
-
-<footer class="footer">
-  <div class="container">
-    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
-    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
-    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
-    <p>  </p>
-  </div>
-</footer>
-
-<script>
-  (function() {
-    function onEscapeClick() {
-      document.write('');
-      window.location = "http://youtube.co.uk"
-    }
-
-    document.getElementById('escape').addEventListener('click', onEscapeClick)
-  }())
-
-</script>
-
-
-
-</body>
-</html>
+      <script>
+        (function() {
+          function onEscapeClick() {
+            document.write('');
+            window.location = "http://youtube.co.uk"
+          }
+          document.getElementById('escape').addEventListener('click', onEscapeClick)
+        }())
+      </script>
+    </body>
+    </html>
