pages social class updates

--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -42,7 +42,7 @@
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
-     <a href="index.html" class="navbar-brand"> Sistah Space</a>
+     <a href="../index.html" class="navbar-brand"> Sistah Space</a>
    </div>
 
    <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -82,22 +82,22 @@
 </div>
 
 <div class = "jumbotron">
- <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
+  <img class = "img-responsive" src="../images/3.JPG" alt="picture">
+  <div class ="text-area">
+  </br>
+  <h1 class = " text-center"> Two women a week are killed by a current or former partner.</h1>   <hr>
+  <h4 class = " text-center">  Many more are left with life changing injuries.</h4> </br>
+</div>
+<button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+<div class="social">
 
-      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-    </div>
-    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
-      <div class ="text-area">
-        </br>
-        <h1 class = " text-center"> Two women a week are killed by a current or former partner.</h1>   <hr>
-        <h4 class = " text-center">  Many more are left with life changing injuries.</h4> </br>
-      </div>
-  </div>
+  <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+  <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+</div>
+</div>
 
 
-  <div class="container">
+  <div class="container-main">
     <div class="main-copy">
 
       <h2> What is abuse?</h2>
