--- a/pages/advice.html
+++ b/pages/advice.html
@@ -42,7 +42,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
        </button>
-       <a href="index.html" class="navbar-brand"> Sistah Space</a>
+       <a href="../index.html" class="navbar-brand"> Sistah Space</a>
      </div>
 
      <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -98,7 +98,7 @@
       </div>
       </div>
 
-  <div class="container ">
+  <div class="container-main">
     <div class=" main-copy">
   <h2 >Sistah Space</h2>
   <p> Sistah Space is a safe space in our community where surviours of domestic violence and abuse can receive help and support their need.</p>
