--- a/pages/news.html
+++ b/pages/news.html
@@ -7,7 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
- <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
@@ -30,7 +30,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  
+
   <title > Sistah Space </title>
   <!-- http://www.favicon-generator.org/ -->
 </head>
@@ -46,7 +46,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
        </button>
-       <a href="index.html" class="navbar-brand"> Sistah Space</a>
+       <a href="../index.html" class="navbar-brand"> Sistah Space</a>
      </div>
 
      <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -83,89 +83,80 @@
        </ul>
      </div>
    </div>
-  </div>
-<div class = "jumbotron">
- <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
-      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-    </div>
-      <div class ="text-area">
-        </br>
-        <h1 class = " text-center"> Sistah Space news</h1>   <hr>
-      </div>
-  </div>
-
-<div class="container">
-<div class ="container news-field">
-
-
-      <div class ="row text-center">
-        <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
-        <h4 class = "text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4>
-      <ul class="date-and-time">
-         <li><h4>  <b>Date:</b> 8th of October 2016 </h4></li>
-         <li><h4> <b>Time:</b> 2pm-7pm </h4></li>
-      </ul>
-        <h4> <b>Venue:</b> Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX </h4>
-        <p>More information to follow shortly.</p>
-
-    </div>
-</div>
-
-    <div class = "col-md-8">
-
-      <h3>BEGINNERS / INTERMEDIATE SEWING CLASS </h3>
-      <p>Thursday evening 7 - 9pm (enrolment and refreshments 6.30pm) with <b> Ms Djanomi</b></p>
-      <p><b>Venue:</b> SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG<p>
-      <p><b>Cost: </b>&pound5 per hour x 2 hours (sign up for the 6 weeks course and 1 double session is free) </p>
-      <p><b><u>LEARN TO....</u></b><p>
-      <ul><li>use a sewing machine</li>
-      <li>insert a zip</li>
-      <li>pockets</li>
-      <li>hand sewing</li>
-      <li>make a garment.</li></ul>
-      ...and much more.<p><br>
-      <i><p>Brothas welcome.</p>
-      <p>Please bring your own fabric.</p>
-      <p>Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.</p></i>
-
  </div>
-<div class = "container">
-
-
-    <div class = "col-md-4">
-      <img class="img-responsive news-pic" src="../images/sewing_class.jpg">
-
-    </div>
-    </div>
-    <hr>
-  </div>
-
+ <div class = "jumbotron">
+  <div class ="text-area">
+  </br>
+  <h1 class = " text-center"> Sistah Space news</h1>   <hr>
 </div>
-<footer class="footer">
-  <div class="container">
-    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
-    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
-    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
-    <p>  </p>
-  </div>
-</footer>
+<button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+<div class="social">
+  <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+  <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+</div>
+</div>
+
+<div class="container-main">
+  <div class ="container">
+
+    <h2 class="text-center"> News </h3>
+      <div class="news-field">
+        <div class="text-center">
+          <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
+          <h4 class="text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4>
+          <ul class="date-and-time">
+            <li><h4>  <b>Date:</b> 8th of October 2016 </h4></li>
+            <li><h4> <b>Time:</b> 2pm-7pm </h4></li>
+          </ul>
+          <h4> <b>Venue:</b> Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX </h4>
+          <p>More information to follow shortly.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class = "col-md-8">
+          <h3>BEGINNERS / INTERMEDIATE SEWING CLASS </h3>
+          <p>Thursday evening 7 - 9pm (enrolment and refreshments 6.30pm) with <b> Ms Djanomi</b></br>
+            <b>Venue:</b> SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG</br>
+            <b>Cost: </b>&pound5 per hour x 2 hours (sign up for the 6 weeks course and 1 double session is free) </p>
+            <p> <b><u>LEARN TO....</u></b>
+              <ul><li>use a sewing machine</li>
+                <li>insert a zip</li>
+                <li>pockets</li>
+                <li>hand sewing</li>
+                <li>make a garment.</li></ul>
+                <p>...and much more.</br></p>
+                <p><i>Brothas welcome.</br>
+                  Please bring your own fabric.</br>
+                  Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.</i></br>
+                </div>
+                <div class = "col-md-4">
+                  <img class="img-responsive news-pic" src="../images/sewing_class.jpg">
+                </div>
+              </div> 
+
+            </div>
+            <footer class="footer">
+              <div class="container">
+                <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+                <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+                <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+                <p>  </p>
+              </footer>
+            </div>
+
+            <script>
+              (function() {
+                function onEscapeClick() {
+                  document.write('');
+                  window.location = "http://youtube.co.uk"
+                }
+
+                document.getElementById('escape').addEventListener('click', onEscapeClick)
+              }())
+
+            </script>
 
 
-<script>
-  (function() {
-    function onEscapeClick() {
-      document.write('');
-      window.location = "http://youtube.co.uk"
-    }
 
-    document.getElementById('escape').addEventListener('click', onEscapeClick)
-  }())
-
-</script>
-
-
-
-</body>
-</html>
+          </body>
+          </html>
