--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -28,7 +28,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  
+
   <title > Sistah Space </title>
 
 </head>
@@ -41,7 +41,7 @@
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
-     <a href="index.html" class="navbar-brand"> Sistah Space</a>
+     <a href="../index.html" class="navbar-brand"> Sistah Space</a>
    </div>
 
    <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -81,14 +81,6 @@
 </div>
 
 <div class = "jumbotron">
- <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
-
-      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-    </div>
-
-
     <img class = "img-responsive" src="../images/5.JPG" alt="picture">
       <div class ="text-area">
         </br>
@@ -96,9 +88,15 @@
         <h4 class=" text-center "> It is a safe space in a heart of our community where we provide immediate support to victims of abuse and their familes.</h4>
         <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
       </div>
+       <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
+
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
       </div>
 
-  <div class="container ">
+  <div class="container-main">
     <div class=" main-copy">
   <h2 >Sistah Space</h2>
   <p> Sistah Space is a safe space in our community where surviours of domestic violence and abuse can receive help and support their need.</p>
