--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,7 +44,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
        </button>
-       <a href="index.html" class="navbar-brand"> Sistah Space</a>
+       <a href="../index.html" class="navbar-brand"> Sistah Space</a>
      </div>
 
      <div class="collapse navbar-collapse" id="navbar-collapse">
